force-app/main/default/objects/Duree_de_lintervention__c/Duree_de_lintervention__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Durée de l’intervention</label>
</CustomObject>