force-app/main/default/objects/Duree_de_lintervention__c/fields/Duree_2_postes__c.field-meta.xml
<CustomField>
    <fullName>Duree_2_postes__c</fullName>
    <label>Duree 2 postes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>