force-app/main/default/objects/Duree_de_lintervention__c/fields/Duree_initiale__c.field-meta.xml
<CustomField>
    <fullName>Duree_initiale__c</fullName>
    <label>Duree initiale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>