force-app/main/default/objects/Duree_de_lintervention__c/fields/Evol__c.field-meta.xml
<CustomField>
    <fullName>Evol__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Evol</label>
    <length>40</length>
    <type>Text</type>
</CustomField>