force-app/main/default/objects/Duree_de_lintervention__c/fields/Sous_type_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Sous_type_d_intervention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sous type d&apos;intervention</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>