force-app/main/default/objects/Duree_de_lintervention__c/fields/Type_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Type_d_intervention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type d&apos;intervention</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>